[workspace]
resolver = "2"
members = [ "tsp-cesr", "tsp-transport", "tsp-crypto", "tsp-vid", "example" , "tsp-definitions"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/wenjing/rust-tsp"
homepage = "https://github.com/wenjing/rust-tsp"
readme = "./README.md"
description = "Rust implementation of the Trust Spanning Protocol"
publish = false
rust-version = "1.75"

[workspace.dependencies]
hpke = { git = "https://github.com/marlonbaeten/rust-hpke", branch = "keys-by-reference", features = ["alloc", "std"] }
crypto_box = { version = "0.9", features = ["alloc", "seal", "chacha20"] }
rand = "0.8"
ed25519-dalek = { version = "2", features = [ "rand_core", "pkcs8" ] }
base64ct = { version = "1.6", features = ["alloc"] }
thiserror = "1.0"
# transport
tokio = { version = "1.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = { version = "0.1" }
futures = { version = "0.3.0", features = ["thread-pool"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
