[package]
name = "demo-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
tsp-vid = { path = "../tsp-vid" }
tsp-crypto = { path = "../tsp-crypto" }
tsp-cesr = { path = "../tsp-cesr" }
tsp-definitions = { path = "../tsp-definitions" }

axum = { version = "0.7", features = ["ws"] }
serde = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64ct = { workspace = true }
