[package]
name = "examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "create-did-web"
path = "src/create-did-web.rs"

[dependencies]
tsp-crypto = { path = "../tsp-crypto" }
tsp-transport = { path = "../tsp-transport" }
tsp-definitions = { path = "../tsp-definitions" }
tsp-vid = { path = "../tsp-vid" }
tsp = { path = "../tsp" }

# dummy data
random_word = { version = "0.4.3", features = ["en"] }

# tcp transport
tokio-stream = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
hpke = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }

# did web
serde = { version = "1.0" }
serde_json = { version = "1.0" }
base64ct = { workspace = true }
