[package]
name = "examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "create-did-web"
path = "src/create-did-web.rs"

[dependencies]
tsp-vid = { path = "../tsp-vid" }
serde_json = { version = "1.0" }
