[package]
name = "seal-unseal-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
vid = { path="../vid", features = ["serde"] }
hpke = { version = "0.11", features = ["serde_impls"] }
rand = "0.8"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
faster-hex = "0.9"
ed25519-dalek = { version = "2", features = [ "rand_core", "pkcs8" ] }
