[package]
name = "seal-unseal-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
hpke = { git = "https://github.com/marlonbaeten/rust-hpke", branch = "keys-by-reference" }
rand = "0.8"
ed25519-dalek = { version = "2", features = [ "rand_core", "pkcs8" ] }
x25519-dalek = "2.0"

[dev-dependencies]
criterion = { version = "0.4" }

[[bench]]
name = "seal-unseal"
harness = false
