[package]
name = "tsp-cesr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
strict = [ ]
cesr-t = ["dep:base64ct"]

[dependencies]
base64ct = { version = "1.6.0", optional = true, features = [ ] }

[dev-dependencies]
base64ct = { version = "1.6.0", features = ["alloc"] }
