[package]
name = "tsp-cesr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
cesr-t = ["dep:base64ct"]
default = ["std"]
std = [ ]
strict = [ ]
alloc = [ ]
demo = ["alloc"]

[dependencies]
base64ct = { workspace = true, optional = true }

[dev-dependencies]
base64ct = { workspace = true }
