[package]
name = "tsp-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
dummy = [ "dep:url" ]

[dependencies]
tsp-definitions = { path = "../tsp-definitions" }
tsp-cesr = { path = "../tsp-cesr" }

hpke = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
crypto_box = { workspace = true }
url = { optional = true, workspace = true }

[dev-dependencies]
tsp-crypto = { path = ".", features = ["dummy"] }
