[package]
name = "tsp-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
tsp-definitions = { path = "../tsp-definitions" }
tsp-cesr = { path = "../tsp-cesr" }
tsp-vid = { path = "../tsp-vid" }
hpke = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
crypto_box = { workspace = true }

[dev-dependencies]
url = { workspace = true }
tsp-crypto = { path = ".", features = ["dummy"] }
base64ct = { workspace = true }
