[package]
name = "tsp-definitions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
tsp-cesr = { path = "../tsp-cesr" }
thiserror = { workspace = true }
hpke = { workspace = true }
ed25519-dalek = { workspace = true }
url = { workspace = true }
