[package]
name = "tsp-vid"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
tsp-definitions = { path = "../tsp-definitions" }
url = { workspace = true }
hpke = { workspace = true }
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["fast", "zeroize", "rand_core"] }
rand.workspace = true
