[package]
name = "tsp-vid"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
tsp-definitions = { path = "../tsp-definitions" }
url = { workspace = true }
hpke = { workspace = true }
rand ={ workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
ed25519-dalek = { workspace = true, features = ["fast", "zeroize", "rand_core"] }
base64ct = { workspace = true }
