[package]
name = "tsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tsp-transport = { path = "../tsp-transport" }
tsp-vid = { path = "../tsp-vid" }
tsp-cesr = { path = "../tsp-cesr" }
tsp-crypto = { path = "../tsp-crypto" }
tsp-definitions = { path = "../tsp-definitions" }
tokio = { workspace = true }
futures-core = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
async-recursion = { workspace = true }

[dev-dependencies]
serial_test = { version = "3.0" }
