[package]
name = "vid"
version = "0.1.0"
edition = "2021"

[dependencies]
ascii = "1.1.0"
base64ct = { version = "1.6.0", features = [ "std", "alloc" ] }
ed25519 = { version = "2.2.3", features = ["std", "pkcs8", "alloc", "pem"] }
ed25519-dalek = { version = "2", features = [ "rand_core", "pkcs8" ] }
rand = "0.8.5"
serde = { version = "1.0.195", features = [ "derive" ], optional = true }
thiserror = "1.0.56"
url = "2.5.0"

[features]
serde = [ "dep:serde", "url/serde", "ed25519-dalek/serde" ]
